fix an alignment bug in the title card

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
   margin: auto;
 }
 
-h2{
+h3{
   padding-top: 5px;
   text-align: right;
   font-size: 15px;
